fix: Training's controllers