@@ -61,14 +61,20 @@ public class BasicSettings implements CommandLineRunner {
     public void createSuperAdmin(){
         logger.info("Created super admin");
         if (!userRepository.existsByUsername(adminUsername)) {
-            User user = userRepository.save(new User(adminUsername, passwordEncoder.encode(adminPassword), Role.ROLE_ADMIN));
+            User user = new User(adminUsername, passwordEncoder.encode(adminPassword), Role.ROLE_ADMIN);
+            user.setName("Name admin");
+            user.setSurname("Surname admin");
+            user = userRepository.save(user);
             usersIdList.add(user);
         }
     }
     public void createSuperUser(){
         logger.info("Created super user");
         if (!userRepository.existsByUsername(userUsername)) {
-            User user = userRepository.save(new User(userUsername, passwordEncoder.encode(userPassword), Role.ROLE_USER));
+            User user = new User(userUsername, passwordEncoder.encode(userPassword), Role.ROLE_USER);
+            user.setName("Name user");
+            user.setSurname("Surname user");
+            user = userRepository.save(user);
             usersIdList.add(user);
         }
     }
@@ -77,18 +83,22 @@ public class BasicSettings implements CommandLineRunner {
         LocalTime lt1 = LocalTime.of(1, 0);
         LocalDateTime ldt1 = LocalDateTime.of(2024, 5, 5, 10, 0);
         Training training1 = new Training(TypeTraining.RUN, 10, lt1, ldt1);
+        training1.setComment("My first training!");
         usersIdList.getFirst().addTraining(training1);
         trainingService.save(usersIdList.get(0), training1);
 
         LocalTime lt2 = LocalTime.of(2, 0);
         LocalDateTime ldt2 = LocalDateTime.of(2024, 5, 5, 10, 0);
         Training training2 = new Training(TypeTraining.CYCLE, 50, lt2, ldt2);
+        training2.setComment("Good afternoon CYCLE :)");
         trainingService.save(usersIdList.get(1), training2);
 
     }
     public void createComments(){
         List<Training> training = trainingRepository.findAll();
-        Comment comment2 = new Comment(training.getFirst(), usersIdList.get(1), "Comment 2");
+        Comment comment1 = new Comment(training.getFirst(), usersIdList.get(0), "Comment for training 1");
+        commentService.save(comment1);
+        Comment comment2 = new Comment(training.get(1), usersIdList.get(1), "Comment for training 2");
         commentService.save(comment2);
     }
 
